--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "vue-antd-jeecg",
   "version": "3.0.0",
@@ -18,12 +17,14 @@
     "@toast-ui/editor": "^2.1.2",
     "ant-design-vue": "^1.7.2",
     "axios": "^0.18.0",
+    "cache-loader": "^4.1.0",
     "china-area-data": "^5.0.1",
     "clipboard": "^2.0.4",
     "codemirror": "^5.46.0",
     "cron-parser": "^2.10.0",
     "dayjs": "^1.8.0",
     "dom-align": "1.12.0",
+    "element-ui": "^2.15.6",
     "enquire.js": "^2.1.6",
     "js-cookie": "^2.2.0",
     "lodash.get": "^4.4.2",
@@ -55,6 +56,7 @@
     "@vue/cli-service": "^3.3.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "7.2.3",
+    "babel-plugin-component": "^1.1.1",
     "compression-webpack-plugin": "^3.1.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.1.0",
