--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "vue-antd-jeecg",
   "version": "3.0.0",
@@ -24,12 +23,14 @@
     "cron-parser": "^2.10.0",
     "dayjs": "^1.8.0",
     "dom-align": "1.12.0",
+    "element-ui": "^2.15.6",
     "enquire.js": "^2.1.6",
     "js-cookie": "^2.2.0",
     "lodash.get": "^4.4.2",
     "lodash.pick": "^4.4.0",
     "md5": "^2.2.1",
     "nprogress": "^0.2.0",
+    "qs": "^6.10.1",
     "tinymce": "^5.3.2",
     "viser-vue": "^2.4.8",
     "vue": "^2.6.10",
@@ -55,6 +56,7 @@
     "@vue/cli-service": "^3.3.0",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "7.2.3",
+    "babel-plugin-component": "^1.1.1",
     "compression-webpack-plugin": "^3.1.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.1.0",
