feat: 新增文件一键下载

--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "element": "^0.1.4",
     "element-ui": "^2.15.6",
     "enquire.js": "^2.1.6",
+    "file-saver": "^2.0.5",
     "js-cookie": "^2.2.0",
+    "jszip": "^3.7.1",
     "lodash.get": "^4.4.2",
     "lodash.pick": "^4.4.0",
     "mavon-editor": "^2.9.1",
