--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   },
   "dependencies": {
     "@antv/data-set": "^0.11.4",
+    "@fullcalendar/core": "^5.10.1",
+    "@fullcalendar/daygrid": "^5.10.1",
+    "@fullcalendar/interaction": "^5.10.1",
+    "@fullcalendar/list": "^5.10.1",
+    "@fullcalendar/timegrid": "^5.10.1",
+    "@fullcalendar/vue": "^5.10.1",
     "@jeecg/antd-online-mini": "3.0.0-beta",
     "@npkg/tinymce-plugins": "^0.0.7",
     "@tinymce/tinymce-vue": "2.1.0",
@@ -34,6 +40,7 @@
     "lodash.pick": "^4.4.0",
     "mavon-editor": "^2.9.1",
     "md5": "^2.2.1",
+    "moment": "^2.29.1",
     "nprogress": "^0.2.0",
     "qs": "^6.10.1",
     "tinymce": "5.5.0",
