--- a/package.json
+++ b/package.json
@@ -44,6 +44,9 @@
     "nprogress": "^0.2.0",
     "qs": "^6.10.1",
     "tinymce": "5.5.0",
+    "sass-loader": "10.1.1",
+    "videojs-contrib-hls": "^5.15.0",
+    "videojs-flash": "^2.2.1",
     "viser-vue": "^2.4.8",
     "vue": "^2.6.10",
     "vue-area-linkage": "^5.1.0",
@@ -56,6 +59,7 @@
     "vue-router": "^3.0.1",
     "vue-splitpane": "^1.0.4",
     "vue2-org-tree": "^1.3.5",
+    "vue-video-player": "^5.0.2",
     "vuedraggable": "^2.20.0",
     "vuex": "^3.1.0",
     "vxe-table": "2.9.13",
@@ -71,11 +75,16 @@
     "babel-eslint": "7.2.3",
     "babel-plugin-component": "^1.1.1",
     "compression-webpack-plugin": "^3.1.0",
+    "css-loader": "^2.0.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.1.0",
     "html-webpack-plugin": "^4.2.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "node-sass": "^6.0.1",
+    "style-loader": "^0.23.1",
+    "video.js": "^7.17.0",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
