--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "element-ui": "^2.15.6",
     "enquire.js": "^2.1.6",
     "file-saver": "^2.0.5",
+    "js-base64": "^3.7.2",
     "js-cookie": "^2.2.0",
     "jszip": "^3.7.1",
     "lodash.get": "^4.4.2",
@@ -50,6 +51,7 @@
     "viser-vue": "^2.4.8",
     "vue": "^2.6.10",
     "vue-area-linkage": "^5.1.0",
+    "vue-axios": "^3.4.0",
     "vue-cropper": "^0.5.4",
     "vue-i18n": "^8.7.0",
     "vue-loader": "^15.7.0",
@@ -58,8 +60,8 @@
     "vue-print-nb-jeecg": "^1.0.9",
     "vue-router": "^3.0.1",
     "vue-splitpane": "^1.0.4",
-    "vue2-org-tree": "^1.3.5",
     "vue-video-player": "^5.0.2",
+    "vue2-org-tree": "^1.3.5",
     "vuedraggable": "^2.20.0",
     "vuex": "^3.1.0",
     "vxe-table": "2.9.13",
@@ -81,9 +83,9 @@
     "html-webpack-plugin": "^4.2.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
+    "video.js": "^7.17.0",
     "node-sass": "^6.0.1",
     "style-loader": "^0.23.1",
-    "video.js": "^7.17.0",
     "vue-awesome-swiper": "^3.1.3",
     "vue-template-compiler": "^2.6.10"
   },
