--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 NODE_ENV=production
-VUE_APP_API_BASE_URL=http://47.99.39.59:8080/smart-system
+VUE_APP_API_BASE_URL=https://weixin.cabbsir.com/smart-system
 VUE_APP_CAS_BASE_URL=http://localhost:8888/cas
 VUE_APP_ONLINE_BASE_URL=http://fileview.jeecg.com/onlinePreview
