--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,5 @@
 NODE_ENV=production
-VUE_APP_API_BASE_URL=https://www.ningxitong.cn/smart-system
+VUE_APP_API_BASE_URL=https://zhcw.itachi.top/smart-system
 VUE_APP_CAS_BASE_URL=http://localhost:8888/cas
 VUE_APP_ONLINE_BASE_URL=http://fileview.jeecg.com/onlinePreview
-VUE_APP_FILE_PREVIEW_URL=https://www.ningxitong.cn:8012/
+VUE_APP_FILE_PREVIEW_URL=https://zhcw.itachi.top/preview/
