--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@npkg/tinymce-plugins": "^0.0.7",
     "@tinymce/tinymce-vue": "2.1.0",
     "@toast-ui/editor": "^2.1.2",
-    "ant-design-vue": "^1.7.2",
+    "ant-design-vue": "1.5.0",
     "axios": "^0.18.0",
     "buefy": "^0.9.13",
     "china-area-data": "^5.0.1",
