--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "vue": "^2.6.10",
     "vue-area-linkage": "^5.1.0",
     "vue-axios": "^3.4.0",
+    "vue-carousel": "^0.18.0",
     "vue-cropper": "^0.5.4",
     "vue-i18n": "^8.7.0",
     "vue-loader": "^15.7.0",
