--- a/.env.development
+++ b/.env.development
@@ -2,4 +2,4 @@ NODE_ENV=development
 VUE_APP_API_BASE_URL=http://localhost:8080/smart-system
 VUE_APP_CAS_BASE_URL=http://cas.example.org:8443/cas
 VUE_APP_ONLINE_BASE_URL=http://fileview.jeecg.com/onlinePreview
-VUE_APP_FILE_PREVIEW_URL=https://zhcw.itachi.top/preview/
+VUE_APP_FILE_PREVIEW_URL=https://www.ningxitong.cn/preview/
